--- a/package.json
+++ b/package.json
@@ -3,25 +3,16 @@
   "version": "1.0.0",
   "description": "parse CMap of a TrueType/OpenType font file",
   "repository": "shinnn/read-font-cmap",
-  "author": {
-    "name": "Shinnosuke Watanabe",
-    "url": "https://github.com/shinnn"
-  },
+  "author": "Shinnosuke Watanabe (https://github.com/shinnn)",
   "scripts": {
-    "pretest": "eslint *.js & jscs *.js",
+    "pretest": "eslint --config node_modules/@shinnn/eslintrc-node/rc.json index.js test.js",
     "test": "node test.js | tap-spec",
     "coverage": "istanbul cover test.js",
     "coveralls": "${npm_package_scripts_coverage} && istanbul-coveralls"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/shinnn/read-font-cmap/blob/master/LICENSE"
-    }
-  ],
+  "license": "MIT",
   "files": [
-    "index.js",
-    "LICENSE"
+    "index.js"
   ],
   "keywords": [
     "read",
@@ -37,17 +28,16 @@
     "metadata"
   ],
   "dependencies": {
-    "font-cmap": "^1.0.0"
+    "font-cmap": "^1.0.1"
   },
   "devDependencies": {
-    "eslint": "^0.8.2",
-    "font-awesome": "^4.2.0",
-    "istanbul": "^0.3.2",
-    "istanbul-coveralls": "^1.0.0",
-    "jscs": "^1.6.2",
-    "lodash": "^2.4.1",
-    "nop": "0.0.0",
-    "tap-spec": "^1.0.0",
-    "tape": "^3.0.0"
+    "@shinnn/eslintrc-node": "^1.0.2",
+    "eslint": "^0.22.1",
+    "font-awesome": "^4.3.0",
+    "istanbul": "^0.3.15",
+    "istanbul-coveralls": "^1.0.3",
+    "lodash.isplainobject": "^3.1.0",
+    "tap-spec": "^4.0.0",
+    "tape": "^4.0.0"
   }
 }
