--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,19 +1,14 @@
-init:
-  - git config --global core.autocrlf input
-
+init: git config --global core.autocrlf input
+shallow_clone: true
 version: '{build}'
-
+skip_tags: true
 environment:
   matrix:
-    - nodejs_version: '0.10'
-    - nodejs_version: '0.11'
-
+    - nodejs_version: '2'
+    - nodejs_version: '0'
 install:
-  - ps: Update-NodeJsInstallation (Get-NodeJsLatestBuild $env:nodejs_version)
+  - ps: Install-Product node $env:nodejs_version
   - npm install
-
 build: off
-
-test_script:
-  - ps: 'node test.js # PowerShell'
-  - cmd: node test.js
+test_script: node test.js
+cache: node_modules
